# gvrat-dashboard

./: .gitignore  .mailmap  BACKLOG.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  SPEC.md  cloudflare-pages.toml  pyproject.toml
.github/workflows/: daily-update.yml
data/gvrat-2026/: course.geojson  leaderboard.json  meta.json
data/gvrat-2026/runners/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+448 more)
frontend/: CLAUDE.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AsOfBanner.tsx  DashboardClient.tsx  DayCounter.tsx  Leaderboard.tsx  RaceMap.tsx  RaceMapInner.tsx  RaceProgress.tsx  StatCards.tsx  StatStrip.tsx
frontend/lib/: data.ts  format.ts
frontend/public/: _headers
graphify-out/: .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
pipeline/: compute.py  config.py  course.py  csv_source.py  descriptions.py  main.py  models.py  runner_files.py  runsignup.py  snapshots.py  virtual_chars.py  waypoints.py
pipeline/ingestion/: __init__.py  base.py  csv_source.py
pipeline/tests/: test_compute.py  test_runner_files.py  test_virtual_chars.py  test_waypoints.py
races/gvrat-2026/: config.json  descriptions.json  route.gpx
(+87 files in other folders)
